Restructure killswitch, add README

--- a/wireguard/Dockerfile
+++ b/wireguard/Dockerfile
@@ -4,7 +4,6 @@ ARG VERSION
 
 USER root
 
-# Install wireguard-tools
 RUN \
   export EXTRA_INSTALL_ARG="build-essential git" \
   && apt-get -qq update \
@@ -22,6 +21,17 @@ RUN \
   && make -C src -j$(nproc) \
   && make -C src install \
   && sed -i "s:sysctl -q net.ipv4.conf.all.src_valid_mark=1:# skipping setting net.ipv4.conf.all.src_valid_mark:" /usr/bin/wg-quick \
+  && echo "kah ALL= EXEC: NOPASSWD: /usr/sbin/iptables -F OUTPUT" >> /etc/sudoers.d/kah \
+  && echo "kah ALL= EXEC: NOPASSWD: /usr/sbin/ip6tables -F OUTPUT" >> /etc/sudoers.d/kah \
+  && echo "kah ALL= EXEC: NOPASSWD: /usr/sbin/iptables -A OUTPUT *" >> /etc/sudoers.d/kah \
+  && echo "kah ALL= EXEC: NOPASSWD: /usr/sbin/ip6tables -A OUTPUT *" >> /etc/sudoers.d/kah \
+  && echo "kah ALL= EXEC: NOPASSWD: /usr/sbin/ip -4 route add *" >> /etc/sudoers.d/kah \
+  && echo "kah ALL= EXEC: NOPASSWD: /usr/sbin/ip -6 route add *" >> /etc/sudoers.d/kah \
+  && echo "kah ALL= EXEC: NOPASSWD: /usr/bin/wg show *" >> /etc/sudoers.d/kah \
+  && echo "kah ALL= EXEC: NOPASSWD: /usr/bin/wg-quick up *" >> /etc/sudoers.d/kah \
+  && echo "kah ALL= EXEC: NOPASSWD: /usr/bin/wg-quick down *" >> /etc/sudoers.d/kah \
+  && echo "kah ALL= EXEC: NOPASSWD: /usr/bin/find /etc/wireguard -type f *" >> /etc/sudoers.d/kah \
+  && echo 'Defaults env_keep +="TZ"' >> /etc/sudoers.d/kah \
   && echo "UpdateMethod=docker\nPackageVersion=${VERSION}\nPackageAuthor=[Team k8s-at-home](https://github.com/k8s-at-home)" > /app/package_info \
   && apt-get remove -y ${EXTRA_INSTALL_ARG} \
   && apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false \
@@ -34,20 +44,6 @@ RUN \
     /var/tmp/ \
   && chmod -R u=rwX,go=rX /app \
   && echo umask ${UMASK} >> /etc/bash.bashrc
-
-# Configure sudoers file
-RUN \
-  echo "kah ALL= EXEC: NOPASSWD: /usr/sbin/iptables -F OUTPUT" >> /etc/sudoers.d/kah \
-  && echo "kah ALL= EXEC: NOPASSWD: /usr/sbin/ip6tables -F OUTPUT" >> /etc/sudoers.d/kah \
-  && echo "kah ALL= EXEC: NOPASSWD: /usr/sbin/iptables -A OUTPUT *" >> /etc/sudoers.d/kah \
-  && echo "kah ALL= EXEC: NOPASSWD: /usr/sbin/ip6tables -A OUTPUT *" >> /etc/sudoers.d/kah \
-  && echo "kah ALL= EXEC: NOPASSWD: /usr/sbin/ip -4 route add *" >> /etc/sudoers.d/kah \
-  && echo "kah ALL= EXEC: NOPASSWD: /usr/sbin/ip -6 route add *" >> /etc/sudoers.d/kah \
-  && echo "kah ALL= EXEC: NOPASSWD: /usr/bin/wg show *" >> /etc/sudoers.d/kah \
-  && echo "kah ALL= EXEC: NOPASSWD: /usr/bin/wg-quick up *" >> /etc/sudoers.d/kah \
-  && echo "kah ALL= EXEC: NOPASSWD: /usr/bin/wg-quick down *" >> /etc/sudoers.d/kah \
-  && echo "kah ALL= EXEC: NOPASSWD: /usr/bin/find /etc/wireguard -type f *" >> /etc/sudoers.d/kah \
-  && echo 'Defaults env_keep +="TZ"' >> /etc/sudoers.d/kah
 
 USER kah
 
