--- a/git-crypt/Dockerfile
+++ b/git-crypt/Dockerfile
@@ -15,8 +15,8 @@ RUN \
   && git clone https://github.com/AGWA/git-crypt.git \
   && cd git-crypt \
   && git checkout "${VERSION}" \
-  && make -j$(nproc) \
-  && make install \
+  && make -C . -j$(nproc) \
+  && make -C . install \
   && apt-get remove -y ${EXTRA_INSTALL_ARG} \
   && apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false \
   && apt-get autoremove -y \
