--- a/actions-runner/Dockerfile
+++ b/actions-runner/Dockerfile
@@ -1,72 +1,126 @@
 # https://github.com/summerwind/actions-runner-controller/blob/master/runner/Dockerfile
 
+
+FROM k8sathome/ubuntu:latest
+
 ARG VERSION
-
-FROM summerwind/actions-runner:v${VERSION}
-
 ARG TARGETPLATFORM
 
-SHELL ["/bin/bash", "-c"]
+USER root
 
-ENV DEBIAN_FRONTEND=noninteractive \
-  DEBCONF_NONINTERACTIVE_SEEN=true
+SHELL ["/bin/bash", "-c"]
+WORKDIR /
+
+ENV AGENT_TOOLSDIRECTORY=/opt/hostedtoolcache
+ENV EXTRA_INSTALL_ARG \
+  build-essential \
+  libssl-dev
 
 # Install apt packages
-RUN sudo apt-get update -qqy \
-  && sudo apt-get upgrade -qqy \
-  && sudo apt-get install -qqy --no-install-recommends \
-    git-crypt gettext-base \
-  && sudo rm -rf /var/lib/apt/lists/*
+RUN \
+  apt-get update -qqy \
+  && apt-get upgrade -qqy \
+  && apt-get install -qqy --no-install-recommends \
+    git-crypt \
+    gettext-base \
+    jq \
+    sudo \
+    ${EXTRA_INSTALL_ARG}
+
+# Set up runner user
+RUN \
+  adduser --disabled-password --gecos "" --uid 1000 runner \
+  && usermod -aG sudo runner \
+  && echo "runner ALL= EXEC: NOPASSWD:ALL" >> /etc/sudoers.d/runner
+
+# Install Runner
+RUN \
+  case "${TARGETPLATFORM}" in \
+    'linux/amd64') export ARCH='x64' ;; \
+    'linux/arm64') export ARCH='arm64' ;; \
+    'linux/arm/v7') export ARCH='arm' ;; \
+  esac \
+  && echo "Installing Runner, arch: ${ARCH}" \
+  && mkdir -p /runner \
+  && cd /runner \
+  && curl -fsSL -o runner.tar.gz https://github.com/actions/runner/releases/download/v${VERSION}/actions-runner-linux-${ARCH}-${VERSION}.tar.gz \
+  && tar xzf ./runner.tar.gz \
+  && rm runner.tar.gz \
+  && ./bin/installdependencies.sh \
+  && mv ./externals ./externalstmp \
+  && apt-get install -y libyaml-dev \
+  && echo "AGENT_TOOLSDIRECTORY=${AGENT_TOOLSDIRECTORY}" > /runner.env \
+  && mkdir "${AGENT_TOOLSDIRECTORY}" \
+  && chgrp runner "${AGENT_TOOLSDIRECTORY}" \
+  && chmod g+rwx "${AGENT_TOOLSDIRECTORY}"
 
 # Install latest kubectl
-RUN sudo curl -sLO https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl \
-  && sudo mv kubectl /usr/local/bin/kubectl \
-  && sudo chmod +x /usr/local/bin/kubectl \
+RUN curl -sLO https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl \
+  && mv kubectl /usr/local/bin/kubectl \
+  && chmod +x /usr/local/bin/kubectl \
   && kubectl version --client 
   
 # Install latest helm3
-RUN sudo curl -sL https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3 | sudo bash \
+RUN curl -sL https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3 | bash \
   && helm version 
 
 # Install latest kubeseal
 RUN KUBESEAL_VERSION=$(curl -s "https://api.github.com/repos/bitnami-labs/sealed-secrets/releases" | jq --raw-output '.[0].tag_name') \
   && KUBESEAL_VERSION=${KUBESEAL_VERSION:1} \
-  && sudo curl -sL -o /usr/local/bin/kubeseal https://github.com/bitnami-labs/sealed-secrets/releases/download/v${KUBESEAL_VERSION}/kubeseal-linux-amd64 \
-  && sudo chmod +x /usr/local/bin/kubeseal \
+  && curl -sL -o /usr/local/bin/kubeseal https://github.com/bitnami-labs/sealed-secrets/releases/download/v${KUBESEAL_VERSION}/kubeseal-linux-amd64 \
+  && chmod +x /usr/local/bin/kubeseal \
   && kubeseal --version
 
 # Install latest fluxctl
 RUN FLUXCTL_VERSION=$(curl -s "https://api.github.com/repos/fluxcd/flux/releases" | jq --raw-output '.[0].tag_name') \
   && FLUXCTL_VERSION=${FLUXCTL_VERSION} \
-  && sudo curl -sL -o /usr/local/bin/fluxctl https://github.com/fluxcd/flux/releases/download/${FLUXCTL_VERSION}/fluxctl_linux_amd64 \
-  && sudo chmod +x /usr/local/bin/fluxctl \
+  && curl -sL -o /usr/local/bin/fluxctl https://github.com/fluxcd/flux/releases/download/${FLUXCTL_VERSION}/fluxctl_linux_amd64 \
+  && chmod +x /usr/local/bin/fluxctl \
   && fluxctl version
 
 # Install latest gomplate
 RUN GOMPLATE_VERSION=$(curl -s "https://api.github.com/repos/hairyhenderson/gomplate/releases" | jq --raw-output '.[0].tag_name') \
   && GOMPLATE_VERSION=${GOMPLATE_VERSION:1} \
-  && sudo curl -o /usr/local/bin/gomplate -sSL https://github.com/hairyhenderson/gomplate/releases/download/v${GOMPLATE_VERSION}/gomplate_linux-amd64 \
-  && sudo chmod +x /usr/local/bin/gomplate \
+  && curl -o /usr/local/bin/gomplate -sSL https://github.com/hairyhenderson/gomplate/releases/download/v${GOMPLATE_VERSION}/gomplate_linux-amd64 \
+  && chmod +x /usr/local/bin/gomplate \
   && gomplate -v
 
 # Install latest yq
-RUN sudo curl -sL -o /usr/local/bin/yq https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64 \
-  && sudo chmod +x /usr/local/bin/yq \
+RUN curl -sL -o /usr/local/bin/yq https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64 \
+  && chmod +x /usr/local/bin/yq \
   && yq --version
 
 # Install latest task
-RUN sudo curl -sL https://taskfile.dev/install.sh | sudo sh \
-  && sudo mv ./bin/task /usr/local/bin/task \
-  && sudo chmod +x /usr/local/bin/task \
+RUN curl -sL https://taskfile.dev/install.sh | sh \
+  && mv ./bin/task /usr/local/bin/task \
+  && chmod +x /usr/local/bin/task \
   && task --version
 
 # Install latest flux
 RUN FLUX_VERSION=$(curl -s "https://api.github.com/repos/fluxcd/flux2/releases" | jq --raw-output '.[0].tag_name') \
   && FLUX_VERSION=${FLUX_VERSION:1} \
-  && sudo curl -o flux.tar.gz -sSL https://github.com/fluxcd/flux2/releases/download/v${FLUX_VERSION}/flux_${FLUX_VERSION}_linux_amd64.tar.gz \
-  && sudo tar xf flux.tar.gz -C /usr/local/bin flux \
-  && sudo rm -rf flux.tar.gz \
-  && sudo chmod +x /usr/local/bin/flux \
-  && sudo chown root:root /usr/local/bin/flux \
+  && curl -o flux.tar.gz -sSL https://github.com/fluxcd/flux2/releases/download/v${FLUX_VERSION}/flux_${FLUX_VERSION}_linux_amd64.tar.gz \
+  && tar xf flux.tar.gz -C /usr/local/bin flux \
+  && rm -rf flux.tar.gz \
+  && chmod +x /usr/local/bin/flux \
+  && chown root:root /usr/local/bin/flux \
   && ls -la /usr/local/bin \
   && flux --version
+
+# Cleanup
+RUN \ 
+  apt-get remove -y ${EXTRA_INSTALL_ARG} \
+  && apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false \
+  && apt-get autoremove -y \
+  && apt-get clean \
+  && \
+  rm -rf \
+    /tmp/* \
+    /var/lib/apt/lists/* \
+    /var/tmp/
+
+COPY ./actions-runner/entrypoint.sh /runner/entrypoint.sh
+COPY ./actions-runner/patched /runner/patched
+
+USER runner
+CMD ["/runner/entrypoint.sh"]
