--- a/.github/workflows/actions-runner.yaml
+++ b/.github/workflows/actions-runner.yaml
@@ -33,6 +33,8 @@ jobs:
         run: |
           VERSION=$(cat ${{ github.workflow }}/.version)
           echo ::set-output name=version::${VERSION}
+          UBUNTUVERSION=$(cat ubuntu/.version)
+          echo ::set-output name=ubuntuversion::${UBUNTUVERSION}
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
@@ -57,7 +59,9 @@ jobs:
         if: github.ref != 'refs/heads/main'
         uses: docker/build-push-action@v2
         with:
-          build-args: VERSION=${{ steps.prep.outputs.version }}
+          build-args: |
+            VERSION=${{ steps.prep.outputs.version }}
+            UBUNTUVERSION=${{ steps.prep.outputs.ubuntuversion }}
           context: .
           file: ./${{ github.workflow }}/Dockerfile
           platforms: linux/amd64,linux/arm64
@@ -69,7 +73,9 @@ jobs:
         if: github.ref == 'refs/heads/main'
         uses: docker/build-push-action@v2
         with:
-          build-args: VERSION=${{ steps.prep.outputs.version }}
+          build-args: |
+            VERSION=${{ steps.prep.outputs.version }}
+            UBUNTUVERSION=${{ steps.prep.outputs.ubuntuversion }}
           context: .
           file: ./${{ github.workflow }}/Dockerfile
           platforms: linux/amd64,linux/arm64
