--- a/.github/workflows/actions-runner.yaml
+++ b/.github/workflows/actions-runner.yaml
@@ -33,8 +33,8 @@ jobs:
         run: |
           VERSION=$(cat ${{ github.workflow }}/.version)
           echo ::set-output name=version::${VERSION}
-          UBUNTUVERSION=$(cat ubuntu/.version)
-          echo ::set-output name=ubuntuversion::${UBUNTUVERSION}
+          UBUNTU_VERSION=$(cat ubuntu/.version)
+          echo ::set-output name=ubuntu_version::${UBUNTU_VERSION}
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
@@ -61,7 +61,7 @@ jobs:
         with:
           build-args: |
             VERSION=${{ steps.prep.outputs.version }}
-            UBUNTUVERSION=${{ steps.prep.outputs.ubuntuversion }}
+            UBUNTU_VERSION=${{ steps.prep.outputs.ubuntu_version }}
           context: .
           file: ./${{ github.workflow }}/Dockerfile
           platforms: linux/amd64,linux/arm64
@@ -75,7 +75,7 @@ jobs:
         with:
           build-args: |
             VERSION=${{ steps.prep.outputs.version }}
-            UBUNTUVERSION=${{ steps.prep.outputs.ubuntuversion }}
+            UBUNTU_VERSION=${{ steps.prep.outputs.ubuntu_version }}
           context: .
           file: ./${{ github.workflow }}/Dockerfile
           platforms: linux/amd64,linux/arm64
