--- a/network-ups-tools/Dockerfile
+++ b/network-ups-tools/Dockerfile
@@ -3,29 +3,50 @@ FROM k8sathome/ubuntu:latest
 USER root
 
 RUN \
-  export BUILD_DEPS="autoconf automake build-essential git libssl-dev libnss3-dev libtool pkg-config python3" \
+  export BUILD_DEPS="\
+    autoconf \
+    automake \
+    build-essential \
+    git \
+    libavahi-core-dev \
+    libavahi-compat-libdnssd-dev \
+    libfreeipmi-dev \
+    libgd-dev \
+    libipmimonitoring-dev \
+    libmodbus-dev \
+    libneon27-dev \
+    libnss3-dev \
+    libpowerman0-dev \
+    libsnmp-dev \
+    libssl-dev \
+    libtool \
+    libusb-dev \
+    pkg-config \
+    python3\
+  " \
   && apt-get -qq update \
   && apt-get -qq install -y \
     libfreeipmi17 \
     libipmimonitoring6 \
+    libmodbus5 \
     libneon27-gnutls \
     libnss3 \
+    libpowerman0 \
     libsnmp35 \
     libltdl7 \
     libusb-0.1-4 \
     libwrap0 \
     ${BUILD_DEPS} \
   && mkdir -p /var/run/nut \
-  && chown kah:kah /var/run/nut \
   && cd /tmp \
   && git clone https://github.com/networkupstools/nut.git nut \
   && cd /tmp/nut \
   && ln -s /usr/bin/python3 /usr/bin/python \
   && ./autogen.sh \
   && ./configure \
-    --with-user=kah --with-group=kah \
     --sysconfdir=/etc/nut \
     --libdir=/usr/lib/`gcc -print-multiarch` \
+    --with-all \
     --with-ssl --with-nss \
     --with-dev --enable-static \
     --with-statepath=/var/run/nut --with-altpidpath=/var/run/nut \
@@ -42,8 +63,6 @@ RUN \
     /tmp/* \
     /var/lib/apt/lists/* \
     /var/tmp/
-
-USER kah
 
 COPY ./network-ups-tools/entrypoint.sh /entrypoint.sh
 CMD ["/entrypoint.sh"]
