--- a/.github/workflows/jackett.yaml
+++ b/.github/workflows/jackett.yaml
@@ -19,6 +19,7 @@ on:
 
 env:
   REGISTRY_IMAGE: k8sathome/${{ github.workflow }}
+  # How long to sleep before running the tests (gives the application time to start)
   GOSS_SLEEP: 30
 
 jobs:
@@ -52,6 +53,14 @@ jobs:
         uses: e1himself/goss-installation-action@v1.0.3
         with:
           version: 'v0.3.16'
+
+      - name: Cache Docker layers
+        uses: actions/cache@v2
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
 
       - name: Login to DockerHub
         uses: docker/login-action@v1
