--- a/.github/workflows/jackett.yaml
+++ b/.github/workflows/jackett.yaml
@@ -77,8 +77,11 @@ jobs:
           file: ./${{ github.workflow }}/Dockerfile
           platforms: linux/amd64,linux/arm64
           push: true
+          load: true
           tags: |
             k8sathome/pull-request:${{github.event.number}}
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache
 
       - name: Test image
         if: github.ref != 'refs/heads/main'
