--- a/.github/workflows/jackett.yaml
+++ b/.github/workflows/jackett.yaml
@@ -68,7 +68,7 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-      - name: Build
+      - name: Build and push
         if: github.ref != 'refs/heads/main'
         uses: docker/build-push-action@v2
         with:
@@ -76,6 +76,19 @@ jobs:
           context: .
           file: ./${{ github.workflow }}/Dockerfile
           platforms: linux/amd64,linux/arm64
+          push: true
+          tags: |
+            k8sathome/pull-request:${{github.event.number}}
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache
+
+      - name: Build local single-platform for testing
+        if: github.ref != 'refs/heads/main'
+        uses: docker/build-push-action@v2
+        with:
+          build-args: VERSION=${{ steps.prep.outputs.version }}
+          context: .
+          file: ./${{ github.workflow }}/Dockerfile
           load: true
           tags: |
             k8sathome/pull-request:${{github.event.number}}
@@ -88,11 +101,6 @@ jobs:
           GOSS_FILE: ${{ github.workflow }}/goss.yaml
         run: |
           dgoss run k8sathome/pull-request:${{github.event.number}}
-
-      - name: Push image
-        if: github.ref != 'refs/heads/main'
-        run: |
-          docker push k8sathome/pull-request:${{github.event.number}}
 
       - name: Build and Push
         if: github.ref == 'refs/heads/main'
