--- a/.github/workflows/nzbget.yaml
+++ b/.github/workflows/nzbget.yaml
@@ -18,7 +18,7 @@ on:
       - reopened
 
 env:
-  REGISTRY_IMAGE: k8sathome/${{ github.workflow }}
+  REGISTRY_IMAGE: ${{ github.workflow }}
 
 jobs:
   build:
@@ -53,6 +53,12 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.GHCR_USERNAME }}
+          password: ${{ secrets.GHCR_PAT }}
+
       - name: Build and Push
         if: github.ref != 'refs/heads/main'
         uses: docker/build-push-action@v2
@@ -63,7 +69,7 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            k8sathome/pull-request:${{github.event.number}}
+            ghcr.io/k8s-at-home/pull-request:${{github.event.number}}
 
       - name: Build and Push
         if: github.ref == 'refs/heads/main'
@@ -75,5 +81,7 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            ${{ env.REGISTRY_IMAGE }}:latest
-            ${{ env.REGISTRY_IMAGE }}:v${{ steps.prep.outputs.version }}
+            k8sathome/${{ env.REGISTRY_IMAGE }}:latest
+            k8sathome/${{ env.REGISTRY_IMAGE }}:v${{ steps.prep.outputs.version }}
+            ghcr.io/k8s-at-home/${{ env.REGISTRY_IMAGE }}:latest
+            ghcr.io/k8s-at-home/${{ env.REGISTRY_IMAGE }}:v${{ steps.prep.outputs.version }}
