mass update to GHCR

--- a/.github/workflows/bazarr.yaml
+++ b/.github/workflows/bazarr.yaml
@@ -1,79 +1,80 @@
 name: bazarr
 
 on:
+  workflow_dispatch:
   push:
     branches:
-      - main
+    - main
     paths:
-      - '.github/workflows/bazarr.yaml'
-      - 'bazarr/**'
-      - '!bazarr/*.md'
+    - '.github/workflows/bazarr.yaml'
+    - 'bazarr/**'
+    - '!bazarr/*.md'
   pull_request:
     paths:
-      - '.github/workflows/bazarr.yaml'
-      - 'bazarr/**'
-      - '!bazarr/*.md'
+    - '.github/workflows/bazarr.yaml'
+    - 'bazarr/**'
+    - '!bazarr/*.md'
     types:
-      - opened
-      - reopened
+    - opened
+    - reopened
 
 env:
-  REGISTRY_IMAGE: k8sathome/${{ github.workflow }}
+  REGISTRY_IMAGE: ${{ github.workflow }}
 
 jobs:
   build:
     runs-on: ubuntu-latest
     if: "!contains(github.event.head_commit.message, '[ci-skip]')"
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+    - name: Checkout
+      uses: actions/checkout@v2
 
-      - name: Prepare
-        id: prep
-        run: |
-          VERSION=$(cat ${{ github.workflow }}/.version)
-          echo ::set-output name=version::${VERSION}
+    - name: Prepare
+      id: prep
+      run: |
+        VERSION=$(cat ${{ github.workflow }}/.version)
+        echo ::set-output name=version::${VERSION}
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-        with:
-          platforms: all
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v1
+      with:
+        platforms: all
 
-      - name: Set up Docker Buildx
-        id: buildx
-        uses: docker/setup-buildx-action@v1
-        with:
-          install: true
-          version: latest
-          driver-opts: image=moby/buildkit:master
+    - name: Set up Docker Buildx
+      id: buildx
+      uses: docker/setup-buildx-action@v1
+      with:
+        install: true
+        version: latest
+        driver-opts: image=moby/buildkit:master
 
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+    - name: Login to GitHub Container Registry
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.GHCR_USERNAME }}
+        password: ${{ secrets.GHCR_TOKEN }}
 
-      - name: Build and Push
-        if: github.ref != 'refs/heads/main'
-        uses: docker/build-push-action@v2
-        with:
-          build-args: VERSION=${{ steps.prep.outputs.version }}
-          context: .
-          file: ./${{ github.workflow }}/Dockerfile
-          platforms: linux/amd64,linux/arm64
-          push: true
-          tags: |
-            k8sathome/pull-request:${{github.event.number}}
+    - name: Build and Push
+      if: github.ref != 'refs/heads/main'
+      uses: docker/build-push-action@v2
+      with:
+        build-args: VERSION=${{ steps.prep.outputs.version }}
+        context: .
+        file: ./${{ github.workflow }}/Dockerfile
+        platforms: linux/amd64,linux/arm64
+        push: true
+        tags: |
+          ghcr.io/k8s-at-home/pull-request:${{github.event.number}}
 
-      - name: Build and Push
-        if: github.ref == 'refs/heads/main'
-        uses: docker/build-push-action@v2
-        with:
-          build-args: VERSION=${{ steps.prep.outputs.version }}
-          context: .
-          file: ./${{ github.workflow }}/Dockerfile
-          platforms: linux/amd64,linux/arm64
-          push: true
-          tags: |
-            ${{ env.REGISTRY_IMAGE }}:latest
-            ${{ env.REGISTRY_IMAGE }}:v${{ steps.prep.outputs.version }}
+    - name: Build and Push
+      if: github.ref == 'refs/heads/main'
+      uses: docker/build-push-action@v2
+      with:
+        build-args: VERSION=${{ steps.prep.outputs.version }}
+        context: .
+        file: ./${{ github.workflow }}/Dockerfile
+        platforms: linux/amd64,linux/arm64
+        push: true
+        tags: |
+          ghcr.io/k8s-at-home/${{ env.REGISTRY_IMAGE }}:latest
+          ghcr.io/k8s-at-home/${{ env.REGISTRY_IMAGE }}:v${{ steps.prep.outputs.version }}
