[wireguard] Allow iptables backend selection

--- a/wireguard/Dockerfile
+++ b/wireguard/Dockerfile
@@ -4,6 +4,8 @@ ARG VERSION
 
 USER root
 
+COPY ./wireguard/build /build
+
 RUN \
   export EXTRA_INSTALL_ARG="build-essential git" \
   && apt-get -qq update \
@@ -21,17 +23,9 @@ RUN \
   && make -C src -j$(nproc) \
   && make -C src install \
   && sed -i "s:sysctl -q net.ipv4.conf.all.src_valid_mark=1:# skipping setting net.ipv4.conf.all.src_valid_mark:" /usr/bin/wg-quick \
-  && echo "kah ALL= EXEC: NOPASSWD: /usr/sbin/iptables -F OUTPUT" >> /etc/sudoers.d/kah \
-  && echo "kah ALL= EXEC: NOPASSWD: /usr/sbin/ip6tables -F OUTPUT" >> /etc/sudoers.d/kah \
-  && echo "kah ALL= EXEC: NOPASSWD: /usr/sbin/iptables -A OUTPUT *" >> /etc/sudoers.d/kah \
-  && echo "kah ALL= EXEC: NOPASSWD: /usr/sbin/ip6tables -A OUTPUT *" >> /etc/sudoers.d/kah \
-  && echo "kah ALL= EXEC: NOPASSWD: /usr/sbin/ip -4 route add *" >> /etc/sudoers.d/kah \
-  && echo "kah ALL= EXEC: NOPASSWD: /usr/sbin/ip -6 route add *" >> /etc/sudoers.d/kah \
-  && echo "kah ALL= EXEC: NOPASSWD: /usr/bin/wg show *" >> /etc/sudoers.d/kah \
-  && echo "kah ALL= EXEC: NOPASSWD: /usr/bin/wg-quick up *" >> /etc/sudoers.d/kah \
-  && echo "kah ALL= EXEC: NOPASSWD: /usr/bin/wg-quick down *" >> /etc/sudoers.d/kah \
-  && echo "kah ALL= EXEC: NOPASSWD: /usr/bin/find /etc/wireguard -type f *" >> /etc/sudoers.d/kah \
-  && echo 'Defaults env_keep +="TZ"' >> /etc/sudoers.d/kah \
+  && mv /build/sudoers_kah /etc/sudoers.d/kah \
+  && chown root:root /etc/sudoers.d/* \
+  && chmod 644 /etc/sudoers.d/* \
   && echo "UpdateMethod=docker\nPackageVersion=${VERSION}\nPackageAuthor=[Team k8s-at-home](https://github.com/k8s-at-home)" > /app/package_info \
   && apt-get remove -y ${EXTRA_INSTALL_ARG} \
   && apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false \
@@ -42,6 +36,7 @@ RUN \
     /tmp/* \
     /var/lib/apt/lists/* \
     /var/tmp/ \
+    /build \
   && chmod -R u=rwX,go=rX /app \
   && echo umask ${UMASK} >> /etc/bash.bashrc \
   && update-ca-certificates
