Add git to install
Signed-off-by: anthr76 <hello@anthonyrabbito.com>

--- a/zenbot/Dockerfile
+++ b/zenbot/Dockerfile
@@ -14,6 +14,7 @@ RUN \
     nodejs \
     npm \
     build-essential \
+    git \
     ${EXTRA_INSTALL_ARG} \
   && \
   curl -fsSL "https://github.com/DeviaVir/zenbot/archive/${VERSION}.tar.gz" | tar xzf - -C /app --strip-components 1 \
