node_modules is required markdown isn't
Signed-off-by: anthr76 <hello@anthonyrabbito.com>

--- a/zenbot/Dockerfile
+++ b/zenbot/Dockerfile
@@ -39,8 +39,8 @@ RUN \
   /app/Dockerfile \
   /app/docker-compose* \
   /app/simulations \
+  /app/*.md \
   /app/conf.js \
-  /app/node_modules
 
 USER kah
 
