Fix syntax errors
Signed-off-by: anthr76 <hello@anthonyrabbito.com>

--- a/zenbot/Dockerfile
+++ b/zenbot/Dockerfile
@@ -41,8 +41,7 @@ RUN \
   /app/Dockerfile \
   /app/docker-compose* \
   /app/simulations \
-  /app/*.md \
-  /app/conf.js \
+  /app/*.md 
 
 USER kah
 
