--- a/.github/workflows/tt-rss.yaml
+++ b/.github/workflows/tt-rss.yaml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   push:
     branches:
-    - main
+    - "$default-branch"
     paths:
     - '.github/workflows/tt-rss.yaml'
     - 'tt-rss/**'
