Use common Ubuntu image

--- a/cert-manager-dnsmadeeasy/Dockerfile
+++ b/cert-manager-dnsmadeeasy/Dockerfile
@@ -1,9 +1,9 @@
-FROM golang:1.15-alpine AS build
+FROM golang:1.15 AS build
 
 WORKDIR /workspace
 ENV GO111MODULE=on
 
-RUN apk add --no-cache git bash curl g++
+RUN apt update -qq && apt install -qq -y git bash curl g++
 
 # Fetch binary early because to allow more caching
 COPY scripts scripts
@@ -25,14 +25,31 @@ RUN  \
        CCGO_ENABLED=0 TEST_ZONE_NAME="$TEST_ZONE_NAME" go test -v .; \
      fi
 
-FROM alpine
+FROM ghcr.io/k8s-at-home/ubuntu:latest
 
-RUN apk update \
-        && apk upgrade \
-        && apk add --no-cache \
-        ca-certificates bash curl \
-        && update-ca-certificates 2>/dev/null || true
+COPY --from=build /workspace/src/webhook /app/webhook
 
-COPY --from=build /workspace/src/webhook /usr/local/bin/webhook
+USER root
+RUN \
+  apt-get -qq update \
+  && \
+  apt-get -qq install -y \
+    ca-certificates \
+    bash \
+    curl \
+  && echo "UpdateMethod=docker\nPackageVersion=${VERSION}\nPackageAuthor=[Team k8s-at-home](https://github.com/k8s-at-home)" > /app/package_info \
+  && apt-get remove -y ${EXTRA_INSTALL_ARG} \
+  && apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false \
+  && apt-get autoremove -y \
+  && apt-get clean \
+  && \
+  rm -rf \
+    /tmp/* \
+    /var/lib/apt/lists/* \
+    /var/tmp/ \
+  && chmod -R u=rwX,go=rX /app \
+  && echo umask ${UMASK} >> /etc/bash.bashrc \
+  && update-ca-certificates
 
-ENTRYPOINT ["webhook"]
+USER kah
+ENTRYPOINT ["/app/webhook"]
