--- a/apps/xteve/Dockerfile
+++ b/apps/xteve/Dockerfile
@@ -1,22 +1,29 @@
-FROM golang:1.14 as builder
+FROM golang:1.16 as builder
 
 ARG VERSION
 ARG TARGETPLATFORM
 
 ENV CGO_ENABLED=0 \
-  GOPATH=/go \
-  GOBIN=/go/bin
+    GOPATH=/go \
+    GOBIN=/go/bin \
+    GO111MODULE=off
 
 WORKDIR /tmp
 
+SHELL ["/bin/bash", "-o", "pipefail", "-c"]
+
 RUN \
-  export GOOS=$(echo ${TARGETPLATFORM} | cut -d / -f1) \
-  && export GOARCH=$(echo ${TARGETPLATFORM} | cut -d / -f2) \
-  && export GOARM=$(echo ${TARGETPLATFORM} | cut -d / -f3 | cut -c2-) \
+  export GOOS \
+  && GOOS=$(echo ${TARGETPLATFORM} | cut -d / -f1) \
+  && export GOARCH \
+  && GOARCH=$(echo ${TARGETPLATFORM} | cut -d / -f2) \
+  && export GOARM \
+  && GOARM=$(echo ${TARGETPLATFORM} | cut -d / -f3 | cut -c2-) \
   && curl -fsSL "https://github.com/xteve-project/xTeVe/archive/${VERSION}.tar.gz" | tar xzf - -C . --strip-components=1 \
   && go get ./... \
   && go build -o /go/bin/xteve xteve.go
 
+# hadolint ignore=DL3007
 FROM ghcr.io/k8s-at-home/ubuntu:latest
 
 ARG VERSION
@@ -26,6 +33,7 @@ USER root
 
 COPY --from=builder /go/bin/xteve /app/xteve
 
+# hadolint ignore=DL3008,DL3015,SC2086
 RUN \
   apt-get -qq update \
   && apt-get -qq install -y \
@@ -34,8 +42,10 @@ RUN \
     ffmpeg \
     curl \
     vlc \
-  && echo "UpdateMethod=docker\nPackageVersion=${VERSION}\nPackageAuthor=[Team k8s-at-home](https://github.com/k8s-at-home)" > /app/package_info \
-  && apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false \
+  && \
+  printf "UpdateMethod=docker\nPackageVersion=%s\nPackageAuthor=[Team k8s-at-home](https://github.com/k8s-at-home)" "${VERSION}" > /app/package_info \
+  && \
+  apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false \
   && apt-get autoremove -y \
   && apt-get clean \
   && \
@@ -45,7 +55,7 @@ RUN \
     /var/cache/apt/* \
     /var/tmp/ \
   && chmod -R u=rwX,go=rX /app \
-  && echo umask ${UMASK} >> /etc/bash.bashrc \
+  && printf "umask %d" "${UMASK}" >> /etc/bash.bashrc \
   && update-ca-certificates
 
 USER kah
