--- a/apps/appdaemon/Dockerfile
+++ b/apps/appdaemon/Dockerfile
@@ -1,3 +1,4 @@
+# hadolint ignore=DL3007
 FROM ghcr.io/k8s-at-home/ubuntu:latest
 
 ARG TARGETPLATFORM
@@ -5,6 +6,9 @@ ARG VERSION
 
 USER root
 
+SHELL ["/bin/bash", "-o", "pipefail", "-c"]
+
+# hadolint ignore=DL3008,DL3015
 RUN \
   apt-get -qq update \
   && \
@@ -22,7 +26,7 @@ RUN \
   && \
   pip3 install --no-cache-dir -U . \
   && \
-  echo "UpdateMethod=docker\nPackageVersion=${VERSION}\nPackageAuthor=[Team k8s-at-home](https://github.com/k8s-at-home)" > /app/package_info \
+  printf "UpdateMethod=docker\nPackageVersion=%s\nPackageAuthor=[Team k8s-at-home](https://github.com/k8s-at-home)" "${VERSION}" > /app/package_info \
   && \
   apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false \
   && apt-get autoremove -y \
@@ -33,7 +37,7 @@ RUN \
     /var/lib/apt/lists/* \
     /var/tmp/ \
   && chown -R kah:kah /app \
-  && echo umask ${UMASK} >> /etc/bash.bashrc \
+  && printf "umask %d" "${UMASK}" >> /etc/bash.bashrc \
   && update-ca-certificates
 
 COPY ./apps/appdaemon/appdaemon.yaml.example /app/conf/appdaemon.yaml.example
