--- a/.github/workflows/base.yaml
+++ b/.github/workflows/base.yaml
@@ -41,10 +41,11 @@ jobs:
     strategy:
       matrix: ${{ fromJson(needs.changes.outputs.matrix) }}
       fail-fast: true
+    if: "!contains(github.event.head_commit.message, '[ci-skip]')"
     steps:
     - uses: brpaz/hadolint-action@v1.2.1
       with:
-        dockerfile: ./apps/${{ matrix.container }}/Dockerfile
+        dockerfile: ./base/${{ matrix.container }}/Dockerfile
 
   build:
     name: Build
