fix: add sab ini and logic to update hostname setting

--- a/apps/sabnzbd/Dockerfile
+++ b/apps/sabnzbd/Dockerfile
@@ -49,5 +49,7 @@ USER kah
 
 EXPOSE 8080
 
+COPY ./apps/sabnzbd/sabnzbd.ini /app/sabnzbd.ini
+
 COPY ./apps/sabnzbd/entrypoint.sh /entrypoint.sh
 CMD ["/entrypoint.sh"]
